force-app/main/default/objects/Order/fields/B2B_a__c.field-meta.xml
<CustomField>
    <fullName>B2B_a__c</fullName>
    <description>This field will hold the a value of the lens configurator.</description>
    <label>a</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>