force-app/main/default/objects/Order/fields/B2B_Addition_Left__c.field-meta.xml
<CustomField>
    <fullName>B2B_Addition_Left__c</fullName>
    <description>This field stores any required Additions in the Left Eye.</description>
    <label>Addition - Left Eye</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>