force-app/main/default/objects/Order/fields/B2B_Addition_Right__c.field-meta.xml
<CustomField>
    <fullName>B2B_Addition_Right__c</fullName>
    <description>This field stores any required Additions in the Right Eye.</description>
    <label>Addition - Right Eye</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>