force-app/main/default/objects/Order/fields/B2B_allowedScaling__c.field-meta.xml
<CustomField>
    <fullName>B2B_allowedScaling__c</fullName>
    <description>This field will hold the allowed scaling value of the lens configurator.</description>
    <label>allowedScaling</label>
    <length>24000</length>
    <type>LongTextArea</type>
</CustomField>