force-app/main/default/objects/Order/fields/B2B_Antireflection_Product__c.field-meta.xml
<CustomField>
    <fullName>B2B_Antireflection_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to stamp the Antireflection product.</description>
    <inlineHelpText>This field is used to stamp the Antireflection product.</inlineHelpText>
    <label>Antireflection Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>