force-app/main/default/objects/Order/fields/B2B_Antireflection_SKU__c.field-meta.xml
<CustomField>
    <fullName>B2B_Antireflection_SKU__c</fullName>
    <description>It will store the anti reflection sku from lens configurator</description>
    <label>Antireflection SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>