force-app/main/default/objects/Order/fields/B2B_b1__c.field-meta.xml
<CustomField>
    <fullName>B2B_b1__c</fullName>
    <description>This field will store the b1 value of the lens configurator.</description>
    <label>b1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>