force-app/main/default/objects/Order/fields/B2B_b2__c.field-meta.xml
<CustomField>
    <fullName>B2B_b2__c</fullName>
    <description>This field will hold the b2 value of the lens configurator</description>
    <label>b2</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>