force-app/main/default/objects/Order/fields/B2B_b__c.field-meta.xml
<CustomField>
    <fullName>B2B_b__c</fullName>
    <description>This field will hold the b value from the lens configurator.</description>
    <label>b</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>