force-app/main/default/objects/Order/fields/B2B_blp__c.field-meta.xml
<CustomField>
    <fullName>B2B_blp__c</fullName>
    <description>This field will hold the blp value of the lens configurator.</description>
    <label>blp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>