force-app/main/default/objects/Order/fields/B2B_Blue_Sensation__c.field-meta.xml
<CustomField>
    <fullName>B2B_Blue_Sensation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will store value of blue sensation product related to lens product.</description>
    <inlineHelpText>This field will store value of blue sensation product related to lens product.</inlineHelpText>
    <label>Blue Sensation</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Orders (Blue Sensation)</relationshipLabel>
    <relationshipName>Orders4</relationshipName>
    <type>Lookup</type>
</CustomField>