force-app/main/default/objects/Order/fields/B2B_BVD_refracted__c.field-meta.xml
<CustomField>
    <fullName>B2B_BVD_refracted__c</fullName>
    <description>This field stores BVD refracted value.</description>
    <label>BVD refracted</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>