force-app/main/default/objects/Order/fields/B2B_BVD_worn__c.field-meta.xml
<CustomField>
    <fullName>B2B_BVD_worn__c</fullName>
    <description>This field stores the value of BVD worn</description>
    <label>BVD worn</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>