force-app/main/default/objects/Order/fields/B2B_Configuration_Type__c.field-meta.xml
<CustomField>
    <fullName>B2B_Configuration_Type__c</fullName>
    <label>B2B Configuration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete Eyewear</fullName>
            </value>
            <value>
                <fullName>Lens Only</fullName>
            </value>
            <value>
                <fullName>Lens Only + frame provided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>