force-app/main/default/objects/Order/fields/B2B_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>B2B_Coordinates__c</fullName>
    <description>This field will hold the coordinate value of the lens configurator.</description>
    <label>Coordinates</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>