force-app/main/default/objects/Order/fields/B2B_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>B2B_Customer_Name__c</fullName>
    <label>Customer Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>