force-app/main/default/objects/Order/fields/B2B_Customer_Service_Preference__c.field-meta.xml
<CustomField>
    <fullName>B2B_Customer_Service_Preference__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to hold the choice selected by that whether should they be contacted by the customer service.</description>
    <label>Customer Service Preference</label>
    <type>Checkbox</type>
</CustomField>