force-app/main/default/objects/Order/fields/B2B_Cylinder_Right__c.field-meta.xml
<CustomField>
    <fullName>B2B_Cylinder_Right__c</fullName>
    <description>This field is used to store the value of Right Cylinder.</description>
    <label>Cylinder - Right Eye</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>