force-app/main/default/objects/Order/fields/B2B_DHP__c.field-meta.xml
<CustomField>
    <fullName>B2B_DHP__c</fullName>
    <description>This field store the value of the DHP value from shape adjustment</description>
    <label>DHP</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>