force-app/main/default/objects/Order/fields/B2B_Drills__c.field-meta.xml
<CustomField>
    <fullName>B2B_Drills__c</fullName>
    <description>This field will hold the drills value of the lens configurator.</description>
    <label>Drills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>