force-app/main/default/objects/Order/fields/B2B_ERP_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>B2B_ERP_Order_Id__c</fullName>
    <description>This field will store the order Id Generated from ERP system</description>
    <externalId>true</externalId>
    <label>B2B ERP Order Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>