force-app/main/default/objects/Order/fields/B2B_Evil_Eye_Edge__c.field-meta.xml
<CustomField>
    <fullName>B2B_Evil_Eye_Edge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field stores the mapping for selection of evil eye edge from RX configurator.</description>
    <label>Evil Eye Edge</label>
    <type>Checkbox</type>
</CustomField>