force-app/main/default/objects/Order/fields/B2B_Eye_Side__c.field-meta.xml
<CustomField>
    <fullName>B2B_Eye_Side__c</fullName>
    <description>This field stores the value of eye side.</description>
    <label>Eye Side</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>right and left lens side</fullName>
            </value>
            <value>
                <fullName>Right lens</fullName>
            </value>
            <value>
                <fullName>Left lens</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>