force-app/main/default/objects/Order/fields/B2B_Final_PreCalcGuid__c.field-meta.xml
<CustomField>
    <fullName>B2B_Final_PreCalcGuid__c</fullName>
    <description>This field will be used to hold the data which will be needed for order processing on production</description>
    <label>PreCalculation GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>