force-app/main/default/objects/Order/fields/B2B_Glazing_Type__c.field-meta.xml
<CustomField>
    <fullName>B2B_Glazing_Type__c</fullName>
    <description>This field will hold the glazing type value of the lens configurator.</description>
    <label>Glazing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Optical Glazing</fullName>
            </value>
            <value>
                <fullName>Optical Sun Glazing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>