force-app/main/default/objects/Order/fields/B2B_Hard_Coating_Product__c.field-meta.xml
<CustomField>
    <fullName>B2B_Hard_Coating_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to stamp the Hard Coating product.</description>
    <inlineHelpText>This field is used to stamp the Hard Coating product.</inlineHelpText>
    <label>Hard Coating Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Orders (Hard Coating Product)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>