force-app/main/default/objects/Order/fields/B2B_Hard_Coating_SKU__c.field-meta.xml
<CustomField>
    <fullName>B2B_Hard_Coating_SKU__c</fullName>
    <description>This field will store hard coating sku from lens configurator</description>
    <label>Hard Coating SKU</label>
    <length>55</length>
    <type>Text</type>
</CustomField>