force-app/main/default/objects/Order/fields/B2B_Legacy_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>B2B_Legacy_Order_Id__c</fullName>
    <description>Holds the order id from the old shop orders.</description>
    <label>B2B Legacy Order Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>