force-app/main/default/objects/Order/fields/B2B_Lens_Color__c.field-meta.xml
<CustomField>
    <fullName>B2B_Lens_Color__c</fullName>
    <description>This will store the lens color of the lens product from vs rx order.</description>
    <label>Lens Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>