force-app/main/default/objects/Order/fields/B2B_Lens_Color_Id__c.field-meta.xml
<CustomField>
    <fullName>B2B_Lens_Color_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will store selected lens color product for VS.</description>
    <inlineHelpText>This field will store selected lens color product for VS.</inlineHelpText>
    <label>Lens Color Id</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Orders (Lens Color Id)</relationshipLabel>
    <relationshipName>Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>