force-app/main/default/objects/Order/fields/B2B_Lens_Distance__c.field-meta.xml
<CustomField>
    <fullName>B2B_Lens_Distance__c</fullName>
    <description>This field will hold the lens distance value of the lens configurator.</description>
    <label>Lens Distance</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>