force-app/main/default/objects/Order/fields/B2B_Lens_Material__c.field-meta.xml
<CustomField>
    <fullName>B2B_Lens_Material__c</fullName>
    <description>This will store material used on lens product.</description>
    <label>Lens Material</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plastic</fullName>
            </value>
            <value>
                <fullName>Metal</fullName>
            </value>
            <value>
                <fullName>natural3D</fullName>
            </value>
            <value>
                <fullName>natural Acetate</fullName>
            </value>
            <value>
                <fullName>naturalPX</fullName>
            </value>
            <value>
                <fullName>PPX</fullName>
            </value>
            <value>
                <fullName>SPX</fullName>
            </value>
            <value>
                <fullName>Titan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>