force-app/main/default/objects/Order/fields/B2B_Lens_Shape__c.field-meta.xml
<CustomField>
    <fullName>B2B_Lens_Shape__c</fullName>
    <description>This field will hold the lens shape value of the lens configurator.</description>
    <label>Lens Shape</label>
    <length>255</length>
    <type>Text</type>
</CustomField>