force-app/main/default/objects/Order/fields/B2B_Lenses_without_Adapter__c.field-meta.xml
<CustomField>
    <fullName>B2B_Lenses_without_Adapter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will hold the value of Lenses without Adapter field from lens configurator.</description>
    <label>Lenses without Adapter</label>
    <type>Checkbox</type>
</CustomField>