force-app/main/default/objects/Order/fields/B2B_Note__c.field-meta.xml
<CustomField>
    <fullName>B2B_Note__c</fullName>
    <description>This field is used to store the Notes.</description>
    <label>Note</label>
    <type>TextArea</type>
</CustomField>