force-app/main/default/objects/Order/fields/B2B_OMA__c.field-meta.xml
<CustomField>
    <fullName>B2B_OMA__c</fullName>
    <description>This field will hold theOMA value of the lens configurator.</description>
    <label>OMA</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>