force-app/main/default/objects/Order/fields/B2B_OMA_Height__c.field-meta.xml
<CustomField>
    <fullName>B2B_OMA_Height__c</fullName>
    <description>This field will hold the oma height value of the lens configurator.</description>
    <label>OMA_Height</label>
    <length>25</length>
    <type>Text</type>
</CustomField>