force-app/main/default/objects/Order/fields/B2B_Optimized_Facet_Cut__c.field-meta.xml
<CustomField>
    <fullName>B2B_Optimized_Facet_Cut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be set or unset for the feature of Optimized facet cut from lens configurator</description>
    <label>Optimized Facet Cut</label>
    <type>Checkbox</type>
</CustomField>