force-app/main/default/objects/Order/fields/B2B_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>B2B_Order_Number__c</fullName>
    <description>Returns either the legacy order id or the newly created order id.</description>
    <formula>IF(ISBLANK(B2B_Legacy_Order_Id__c) , OrderNumber, B2B_Legacy_Order_Id__c)</formula>
    <label>B2B Order Number</label>
    <type>Text</type>
</CustomField>