force-app/main/default/objects/Order/fields/B2B_Pantoscopic_tilt__c.field-meta.xml
<CustomField>
    <fullName>B2B_Pantoscopic_tilt__c</fullName>
    <description>This field stores the value of Pantoscopic tilt.</description>
    <label>Pantoscopic tilt</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>