force-app/main/default/objects/Order/fields/B2B_PB1_Left__c.field-meta.xml
<CustomField>
    <fullName>B2B_PB1_Left__c</fullName>
    <description>This field stores the value of Prism base 1 for Left Eye.</description>
    <label>Prism base 1 - Left Eye</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>