force-app/main/default/objects/Order/fields/B2B_PB1Placement_Right__c.field-meta.xml
<CustomField>
    <fullName>B2B_PB1Placement_Right__c</fullName>
    <description>This field stores the value of Prism base 1 Placement for Right Eye.</description>
    <label>Prism base 1 Placement - Right Eye</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In</fullName>
                <label>In (0°)</label>
            </value>
            <value>
                <fullName>Out</fullName>
                <label>Out (180°)</label>
            </value>
            <value>
                <fullName>inside</fullName>
                <isActive>false</isActive>
                <label>inside</label>
            </value>
            <value>
                <fullName>outside</fullName>
                <isActive>false</isActive>
                <label>outside</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>