force-app/main/default/objects/Order/fields/B2B_PB2Placement_Right__c.field-meta.xml
<CustomField>
    <fullName>B2B_PB2Placement_Right__c</fullName>
    <description>This field stores the value of Prism base 2 Placement for Right Eye.</description>
    <label>Prism base 2 Placement - Right Eye</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Up</fullName>
                <label>Up (90°)</label>
            </value>
            <value>
                <fullName>Down</fullName>
                <label>Down (270°)</label>
            </value>
            <value>
                <fullName>above</fullName>
                <isActive>false</isActive>
                <label>above</label>
            </value>
            <value>
                <fullName>below</fullName>
                <isActive>false</isActive>
                <label>below</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>