force-app/main/default/objects/Order/fields/B2B_Photo_Sensation__c.field-meta.xml
<CustomField>
    <fullName>B2B_Photo_Sensation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will store Photo Sensation Product related to Lens Product.</description>
    <inlineHelpText>This field will store Photo Sensation Product related to Lens Product.</inlineHelpText>
    <label>Photo Sensation</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Orders (Photo Sensation)</relationshipLabel>
    <relationshipName>Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>