force-app/main/default/objects/Order/fields/B2B_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>B2B_PO_Number__c</fullName>
    <label>Internal PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>