force-app/main/default/objects/Order/fields/B2B_Prism2_Left__c.field-meta.xml
<CustomField>
    <fullName>B2B_Prism2_Left__c</fullName>
    <description>This field is used to store the value of Prism 2 for Left Eye.</description>
    <label>Prism 2 - Left Eye</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>