force-app/main/default/objects/Order/fields/B2B_Prism_1_Right__c.field-meta.xml
<CustomField>
    <fullName>B2B_Prism_1_Right__c</fullName>
    <description>This field is used to store the value of Prism 1 for Right Eye.</description>
    <label>Prism 1 - Right Eye</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>