force-app/main/default/objects/Order/fields/B2B_Progression_Length__c.field-meta.xml
<CustomField>
    <fullName>B2B_Progression_Length__c</fullName>
    <description>This field will hold the progression length value of the lens configurator.</description>
    <label>Progression Length</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>