force-app/main/default/objects/Order/fields/B2B_Pupil_Distance_Left_Eye__c.field-meta.xml
<CustomField>
    <fullName>B2B_Pupil_Distance_Left_Eye__c</fullName>
    <description>This field stores the value of the distance between the pupil for Left-Eye.</description>
    <label>Pupil Distance - Left Eye</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>