force-app/main/default/objects/Order/fields/B2B_Pupil_Distance_Right_Eye__c.field-meta.xml
<CustomField>
    <fullName>B2B_Pupil_Distance_Right_Eye__c</fullName>
        <description>This field stores the value of the distance between the pupil for right-Eye.</description>
    <label>Pupil Distance - Right Eye</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>