force-app/main/default/objects/Order/fields/B2B_Remove_Drills__c.field-meta.xml
<CustomField>
    <fullName>B2B_Remove_Drills__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will hold the remove drills value of the lens configurator.</description>
    <label>Remove Drills</label>
    <type>Checkbox</type>
</CustomField>