force-app/main/default/objects/Order/fields/B2B_Remove_Groove__c.field-meta.xml
<CustomField>
    <fullName>B2B_Remove_Groove__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will hold the Remove Groove value of the lens configurator.</description>
    <label>Remove Groove</label>
    <type>Checkbox</type>
</CustomField>