force-app/main/default/objects/Order/fields/B2B_RX_Solution_Description__c.field-meta.xml
<CustomField>
    <fullName>B2B_RX_Solution_Description__c</fullName>
    <description>This will store the product description of RX solution product</description>
    <label>RX Solution Description</label>
    <type>TextArea</type>
</CustomField>