force-app/main/default/objects/Order/fields/B2B_RX_Type__c.field-meta.xml
<CustomField>
    <fullName>B2B_RX_Type__c</fullName>
    <description>RX Type selection for EE Frame</description>
    <label>RX Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>